# Lightning-Impulse-UHF

./: .gitignore  README.md  codigo_python_uhf_lightning(new_code) copy 2.py  pyproject.toml  signal_acquisition_processing.py
lightningimpulseuhf/: Signal_Acquisition_Analyzer.py  main.py
lightningimpulseuhf/Serie6_metrics/: Metrics Serie 6 Bioinspired.csv  Metrics Serie 6 Ferrite.csv  Metrics Serie 6 Vivaldi.csv  Metrics Serie 6 Voltage Divider.csv  Peaks Serie 6 Bioinspired.csv  Peaks Serie 6 Ferrite.csv  Peaks Serie 6 Vivaldi.csv  Peaks Serie 6 Voltage Divider.csv
lightningimpulseuhf/serie3_metrics/: Metrics Serie 3 Bioinspired.csv  Metrics Serie 3 Ferrite.csv  Metrics Serie 3 Vivaldi.csv  Metrics Serie 3 Voltage Divider.csv  Peaks Serie 3 Bioinspired.csv  Peaks Serie 3 Ferrite.csv  Peaks Serie 3 Vivaldi.csv  Peaks Serie 3 Voltage Divider.csv
lightningimpulseuhf/serie4_metrics/: Metrics Serie 4 Bioinspired.csv  Metrics Serie 4 Ferrite.csv  Metrics Serie 4 Vivaldi.csv  Metrics Serie 4 Voltage Divider.csv  Peaks Serie 4 Bioinspired.csv  Peaks Serie 4 Ferrite.csv  Peaks Serie 4 Vivaldi.csv  Peaks Serie 4 Voltage Divider.csv
lightningimpulseuhf/serie5_metrics/: Metrics Serie 5 Bioinspired.csv  Metrics Serie 5 Ferrite.csv  Metrics Serie 5 Vivaldi.csv  Metrics Serie 5 Voltage Divider.csv  Peaks Serie 5 Bioinspired.csv  Peaks Serie 5 Ferrite.csv  Peaks Serie 5 Vivaldi.csv  Peaks Serie 5 Voltage Divider.csv
