[tool.poetry]
name = "lightningimpulseuhf"
version = "0.1.0"
description = ""
authors = ["daniell <daniel.figueroa.14@sansano.usm.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
matplotlib = "^3.8.3"
scienceplots = "^2.1.1"
pywavelets = "^1.5.0"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
